# games_rustscape

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  TODO.md  docker-compose.yml  run.sh
archive/: old-todo.md
assets/rendering/: README.md
cache/: README.md  assemble.sh  main_file_cache.idx0  main_file_cache.idx1  main_file_cache.idx10  main_file_cache.idx11  main_file_cache.idx12  main_file_cache.idx13  main_file_cache.idx14  main_file_cache.idx15  main_file_cache.idx16  main_file_cache.idx17  main_file_cache.idx18  main_file_cache.idx19  main_file_cache.idx2  main_file_cache.idx20  main_file_cache.idx21  main_file_cache.idx22  main_file_cache.idx23  main_file_cache.idx24  main_file_cache.idx25  main_file_cache.idx26  main_file_cache.idx3  main_file_cache.idx4  main_file_cache.idx5  main_file_cache.idx6  main_file_cache.idx7  main_file_cache.idx8  main_file_cache.idx9
config/: server.toml  supervisord.conf
config/html/: 404.html  50x.html  index.html  status.html
config/mysql/init/: 01-init.sh
config/nginx/conf.d/: default.conf  rust-server.conf
config/postgres/init/: 001_schema.sql
config/redis/: redis.conf
config/ssl/: server.crt  server.key
docker/nginx/: Dockerfile
docker/nginx-rust/: Dockerfile
docker/server/: Dockerfile
docker/server-rust/: Dockerfile
scripts/: extract-sprites.sh  run-rust.sh  run.sh
scripts/server/: init-db.sh  start-management.sh  start-server.sh
src/client/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/client/web/scripts/: test-websocket.js
src/client/web/src/: index.ts
src/client/web/src/protocol/: ByteBuffer.ts  Isaac.ts  index.ts
src/client/web/src/renderer/: GameRenderer.ts
src/clients/: README.md  gradle.properties
src/clients/composeApp/: build.gradle.kts  compress-assets.sh
src/clients/composeApp/src/commonMain/kotlin/com/rustscape/client/ui/: App.kt
src/clients/composeApp/src/desktopMain/kotlin/com/rustscape/client/: Main.kt
src/clients/composeApp/src/desktopMain/kotlin/com/rustscape/client/sprites/: DesktopSpriteLoader.kt
src/clients/composeApp/src/wasmJsMain/kotlin/com/rustscape/client/: Main.kt
src/clients/composeApp/src/wasmJsMain/kotlin/com/rustscape/client/audio/: WebSoundManager.kt
src/clients/composeApp/src/wasmJsMain/kotlin/com/rustscape/client/sprites/: WebSpriteLoader.kt
src/clients/composeApp/src/wasmJsMain/resources/: index.html
src/clients/deploy/: compress-assets.sh
src/clients/desktop/: Cargo.toml
src/clients/desktop/src/: lib.rs
src/clients/desktop/src/game/: client.rs  mod.rs
src/clients/desktop/src/net/: mod.rs
src/clients/desktop/src/net/packet_handlers/: mod.rs
src/clients/desktop/src/util/: mod.rs
src/clients/desktop/src/world/: mod.rs
src/clients/desktop/src/world/entity/: mod.rs  player.rs
src/clients/kmp/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
src/clients/kmp/composeApp/: build.gradle.kts
src/clients/kmp/composeApp/src/desktopMain/kotlin/com/rustscape/client/: Main.kt
src/clients/kmp/composeApp/src/wasmJsMain/kotlin/com/rustscape/client/: Main.kt
src/clients/kmp/deploy/: README.md  nginx.conf
src/clients/kmp/gradle/: libs.versions.toml
src/clients/kmp/shared/: build.gradle.kts
src/clients/kmp/shared/src/commonTest/kotlin/com/rustscape/client/: ProtocolTest.kt
src/clients/shared/: build.gradle.kts
src/clients/shared/src/commonMain/kotlin/com/rustscape/client/game/: GameState.kt
src/clients/web/: index.html  test.html  vite.config.ts
src/clients/web/dist-kmp/: rustscape-client-main-527d4562.js  rustscape-client-vendors.js.map  rustscape-client.js
src/clients/web/public/sprites/: extra_manifest.json  sprites_manifest.json  textures_manifest.json
src/clients/web/public/sprites/sprites/: sprites_0.json
src/clients/web/scripts/: test-websocket.js
src/clients/web/src/: index.ts
src/clients/web/src/auth/: AuthService.ts
src/clients/web/src/game/: GameState.ts  index.ts
src/clients/web/src/protocol/: ByteBuffer.ts
src/clients/web/src/renderer/: GameRenderer.ts
src/server/: Cargo.toml
src/server/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/server/src/api/: error.rs  middleware.rs  mod.rs  response.rs
src/server/src/api/auth/: handlers.rs  jwt.rs  mod.rs  password.rs  queries.rs
src/server/src/auth/: mod.rs
src/server/src/cache/: mod.rs  sprites.rs
src/server/src/crypto/: isaac.rs  mod.rs  rsa.rs
src/server/src/game/: bank.rs  equipment.rs  ground_item.rs  inventory.rs  item.rs  mod.rs  persistence.rs  player.rs  world.rs
src/server/src/game/sync/: mod.rs  player_sync.rs  update_flags.rs
src/server/src/net/: buffer.rs  handler.rs  mod.rs  session.rs  transport.rs
src/server/src/protocol/: game.rs  handshake.rs  js5.rs  login.rs  login_init.rs  mod.rs  packets.rs
src/server/tests/: integration_test.rs
(+42 files in other folders)
