[package]
name = "rustscape-server"
version = "0.1.0"
edition = "2021"
authors = ["Rustscape Team"]
description = "Rustscape game server - A Rust implementation of a 530 revision game server"
license = "MIT"
repository = "https://github.com/rustscape/rustscape"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "macros", "sync", "net", "io-util", "time", "signal"] }

# Networking
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tungstenite = "0.21"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "macros"] }

# Cryptography
rand = "0.8"
num-bigint = "0.4"
rsa = "0.9"
argon2 = "0.5"

# Compression
flate2 = "1.0"
bzip2 = "0.4"
lzma-rs = "0.3"

# Checksums
crc32fast = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
bytes = "1.5"
parking_lot = "0.12"
dashmap = "5.5"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
bitflags = "2.4"

# Configuration
config = "0.14"
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
pretty_assertions = "1.4"

[[bin]]
name = "rustscape-server"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true

[features]
default = []
dev = []
production = []
