[package]
name = "rustscape-client"
version = "1.0.0"
edition = "2021"
authors = ["nuniesmith"]
description = "A Rust implementation of the Rustscape game client"

[dependencies]
# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Utilities
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"

[lib]
name = "rustscape_client"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
